--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     height: 652px;
     background-image: url('assets/Hero-bg.png');
     text-align: center;
+    margin-bottom: 100px;
 }
 .header-section-style img{
 margin-top: 20px;
@@ -56,7 +57,153 @@ margin-top: 50px;
 
 
 }
-.web-devolopment-section container
+/* Web-devolopment section start */
+.web-devolopment-container
 {
+width: 1140px;
+height: 1395px;
+border: 2px solid red;
+margin-bottom: 20px;
+}
+.web-devolopment-content-title
+{
+ width: 852px;
+height: 39px;
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 32px;
+font-weight: 800;
+line-height: 37px;
+letter-spacing: 0%;
+text-align: center;
+
+}
+.web-devolopment-content-description
+{
+    width: 852px;
+height: 52px;
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+margin-bottom: 20px;
+
+}
+.iwilldo-section-container
+{
+width: 850px;
+height: 240px;
+display: flex;
+
+display:flex;
+flex-direction: row;
+justify-content:space-between;
+align-items: center;
+padding: 0px;
+margin: 32px 0px;
+}
+.iwilldo-section-text
+{
+width: 477px;
+height: 220px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+padding: 0px;
+}
+.iwilldo-section-title
+{
+width: 390px;
+height: 72px;
+flex: none;
+order: 0;
+flex-grow: 0;
+margin: 16px 0px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+padding: 0px;
+}
+.iwilldo-section-description
+{
+width: 468px;
+height: 52px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+padding: 0px;
+
+}
+.iwilldo-section-button
+{
+width: 150px;
+height: 48px;
+box-sizing: border-box;
+border: 1px solid rgb(13, 19, 33);
+opacity: 0.7;
+flex: none;
+order: 1;
+flex-grow: 0;
+margin: 32px 0px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 12px 20px 12px 20px;
+
+}
+.iwillhelp-section-container
+{
+    width: 850px;
+height: 240px;
+display: flex;
+
+border-radius: 16px;
+
+background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+padding: 30px;
+}
+.iwillhelp-section-text
+{
+    width: 477px;
+height: 220px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+padding: 0px;
+margin: 0px 32px;
+
+}
+.iwillhelp-section-title
+{
+    width: 477px;
+height: 72px;
+color: rgba(13, 19, 33, 0.7);
+font-family: Azeret Mono;
+font-size: 18px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+text-align: left;
+
+}
+.iwillhelp-section-description
+{
+    width: 468px;
+height: 52px;
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
 
 }
