--- a/style.css
+++ b/style.css
@@ -3,6 +3,33 @@
     margin: 0 auto;
     box-sizing: border-box;
 }
+.button-primary{
+    width: 190px;
+height: 40px;
+border: 1px solid rgb(13, 19, 33);
+border-radius: 5px;
+
+}
+.nav-title{
+    width: 128px;
+height: 33px;
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 28px;
+font-weight: 800;
+}
+.nav-bar{
+    display: flex;
+    flex-direction: row;
+justify-content: space-between;
+align-items: center;
+padding: 17px 24px 17px 24px;
+
+}
+nav ul li{
+    list-style: none;
+}
+/* The navigation section element styles end here  */
 /* header section style start here */
 .header-section-style
 {
@@ -61,7 +88,7 @@ margin-top: 50px;
 .web-devolopment-container
 {
 width: 1140px;
-height: 1395px;
+height: 1000px;
 border: 2px solid red;
 margin-bottom: 20px;
 }
@@ -183,7 +210,7 @@ margin: 0px 32px;
 }
 .iwillhelp-section-title
 {
-    width: 477px;
+width: 477px;
 height: 72px;
 color: rgba(13, 19, 33, 0.7);
 font-family: Azeret Mono;
@@ -203,8 +230,7 @@ font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
-letter-spacing: 0%;
-text-align: left;
+
 
 }
 .iwillcode-section-container
@@ -216,6 +242,7 @@ flex-direction: row;
 justify-content: space-around;
 margin-top: 20px;
 padding: 0px;
+margin-right: 10;
 }
 .iwillcode-section-text-title
 {
@@ -311,16 +338,34 @@ text-align: center;
 .mytarget-section-img
 {
 display: flex;
+gap: 0px;
 }
 .target-1
 {
 border-radius: 16px;
 
 background: rgba(255, 76, 30, 0.05);
-width: 364px;
-height: 300px;
+
+width: 284px;
+height: 220px;
 }
 .img-1
 {
 
+}
+.target-2
+{
+width: 284px;
+height: 220px;
+border-radius: 16px;
+
+background: rgba(0, 76, 232, 0.05);
+}
+.target-3
+{
+width: 284px;
+height: 220px;
+border-radius: 16px;
+
+background: rgba(255, 223, 0, 0.05);
 }
