--- a/style.css
+++ b/style.css
@@ -369,3 +369,94 @@ border-radius: 16px;
 
 background: rgba(255, 223, 0, 0.05);
 }
+.handshake
+{
+width: 1140px;
+height: 314px;
+background-image: url('assets/handshake.jpg');
+background-size: cover;
+background-position: center;
+border-radius: 16px;
+background-color:  rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url(Email);;
+
+
+}
+.footer-text
+{
+width: 1044px;
+height: 186px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
+margin: 32px 0px;
+}
+.footer-title
+{
+width: 230px;
+height: 36px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
+color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 18px;
+font-weight: 550;
+line-height: 36px;
+letter-spacing: 0%;
+text-align: center;
+
+}
+.footer-description
+{
+width: 730px;
+height: 104px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
+color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+}
+.footer-text-butoon
+{
+width: 548px;
+height: 57px;
+display: flex;
+flex-direction: row;
+justify-content: flex-start;
+align-items: center;
+padding: 19px 20px 19px 20px;
+margin: 0px 16px;
+box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 8px;
+
+background: rgb(255, 255, 255);
+display: flex;
+flex-direction: row;
+justify-content: flex-start;
+align-items: center;
+padding: 19px 20px 19px 20px;
+
+/* Inside Auto Layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+margin: 0px 16px;
+}
+.footer-submit
+{
+width: 120px;
+height: 58px;
+
+}
