--- a/style.css
+++ b/style.css
@@ -1,150 +1,168 @@
-*{
+* {
     padding: 0;
     margin: 0 auto;
     box-sizing: border-box;
 }
-.button-primary{
+
+.button-primary {
     width: 190px;
-height: 40px;
-border: 1px solid rgb(13, 19, 33);
-border-radius: 5px;
+    height: 40px;
+    border: 1px solid rgb(13, 19, 33);
+    border-radius: 5px;
 
 }
-.nav-title{
+
+.nav-title {
     width: 128px;
-height: 33px;
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 28px;
-font-weight: 800;
+    height: 33px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 28px;
+    font-weight: 800;
 }
-.nav-bar{
+
+.nav-bar {
     display: flex;
     flex-direction: row;
-justify-content: space-between;
-align-items: center;
-padding: 17px 24px 17px 24px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 17px 24px 17px 24px;
 
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
 }
+
 /* The navigation section element styles end here  */
 /* header section style start here */
-.header-section-style
-{
+.header-section-style {
     width: 1440px;
     height: 652px;
     background-image: url('assets/Hero-bg.png');
     text-align: center;
     margin-bottom: 100px;
 }
-.header-section-style img{
-margin-top: 20px;
+
+.header-section-style img {
+    margin-top: 20px;
 }
-.header-section-content-title{
+
+.header-section-content-title {
     width: 998px;
     height: 136px;
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 38px;
-font-weight: 600;
-line-height: 68px;
-letter-spacing: 0%;
-text-align: center;
-letter-spacing: 0%;
-margin-top: 20px;
+    font-family: Azeret Mono;
+    font-size: 38px;
+    font-weight: 600;
+    line-height: 68px;
+    letter-spacing: 0%;
+    text-align: center;
+    letter-spacing: 0%;
+    margin-top: 20px;
 
 }
-.header-section-content-description{
+
+.header-section-content-description {
     width: 852px;
-height: 52px;
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
-text-align: center;
-margin-top: 30px;
+    height: 52px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-top: 30px;
 
 }
-.header-section-content-button{
-width: 160px;
-height: 24px;
-align-items: center;
-padding: 21px 24px 21px 24px;
-display: flex;
-flex-direction: row;
-justify-content: center;
-color: rgb(255, 255, 255);
-border-radius: 8px;
-background: rgb(13, 19, 33);
-margin-top: 50px;
+
+.header-section-content-button {
+    width: 160px;
+    height: 24px;
+    align-items: center;
+    padding: 21px 24px 21px 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    background: rgb(13, 19, 33);
+    margin-top: 50px;
 
 
 }
+
 /* Web-devolopment section start */
-.web-devolopment-container
-{
-width: 1140px;
-height: 1000px;
-border: 2px solid red;
-margin-bottom: 20px;
+.web-devolopment-container {
+    width: 1140px;
+    height: 1000px;
+    /* border: 2px solid red; */
+    margin-bottom: 50px;
 }
-.web-devolopment-content-title
-{
- width: 852px;
-height: 39px;
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 32px;
-font-weight: 800;
-line-height: 37px;
-letter-spacing: 0%;
-text-align: center;
 
-}
-.web-devolopment-content-description
-{
+.web-devolopment-content-title {
     width: 852px;
-height: 52px;
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
-text-align: center;
-margin-bottom: 20px;
+    height: 39px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
 
 }
-.iwilldo-section-container
-{
-width: 850px;
-height: 240px;
-display: flex;
 
-display:flex;
-flex-direction: row;
-justify-content:space-between;
-align-items: center;
-padding: 0px;
-margin: 32px 0px;
+.web-devolopment-content-description {
+    width: 852px;
+    height: 52px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 20px;
+
 }
-.iwilldo-section-text
-{
-width: 477px;
-height: 220px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start;
-padding: 0px;
+
+.code-help-item {
+    width: 946px;
+    height: 1072px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0px;
 }
-.iwilldo-section-title
-{
-width: 390px;
+
+.iwilldo-section-container {
+    width: 850px;
+    height: 240px;
+    display: flex;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px;
+    margin: 32px 0px;
+}
+
+.iwilldo-section-text {
+    width: 477px;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0px;
+}
+
+.iwilldo-section-title {
+    /* width: 390px;
 height: 72px;
 flex: none;
 order: 0;
@@ -154,309 +172,313 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: flex-start;
-padding: 0px;
+padding: 0px; */
+    width: 390px;
+    height: 72px;
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
 }
-.iwilldo-section-description
-{
-width: 468px;
-height: 52px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-padding: 0px;
 
-}
-.iwilldo-section-button
-{
-width: 150px;
-height: 48px;
-box-sizing: border-box;
-border: 1px solid rgb(13, 19, 33);
-opacity: 0.7;
-flex: none;
-order: 1;
-flex-grow: 0;
-margin: 32px 0px;
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 12px 20px 12px 20px;
-
-}
-.iwillhelp-section-container
-{
-    width: 850px;
-height: 240px;
-display: flex;
-
-border-radius: 16px;
-
-background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
-padding: 30px;
-}
-.iwillhelp-section-text
-{
-    width: 477px;
-height: 220px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start;
-padding: 0px;
-margin: 0px 32px;
-
-}
-.iwillhelp-section-title
-{
-width: 477px;
-height: 72px;
-color: rgba(13, 19, 33, 0.7);
-font-family: Azeret Mono;
-font-size: 18px;
-font-weight: 700;
-line-height: 36px;
-letter-spacing: 0%;
-text-align: left;
-
-}
-.iwillhelp-section-description
-{
+.iwilldo-section-description {
     width: 468px;
-height: 52px;
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
+    height: 52px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0px;
+
+}
+
+.iwilldo-section-button {
+    width: 150px;
+    height: 48px;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 32px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px 12px 20px;
+
+}
+
+.iwillhelp-section-container {
+    width: 850px;
+    height: 240px;
+    display: flex;
+
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0px;
+}
+
+.iwillhelp-section-text {
+    width: 477px;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0px;
+    margin: 0px 32px;
+
+}
+
+.iwillhelp-section-title {
+    width: 477px;
+    height: 72px;
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+
+}
+
+.iwillhelp-section-description {
+    width: 468px;
+    height: 52px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
 
 
 }
-.iwillcode-section-container
-{
-display: flex;
-width: 850px;
-height: 240px;
-flex-direction: row;
-justify-content: space-around;
-margin-top: 20px;
-padding: 0px;
-margin-right: 10;
-}
-.iwillcode-section-text-title
-{
-width: 390px;
-height: 72px;
-color: rgba(13, 19, 33, 0.7);
-font-family: Azeret Mono;
-font-size: 24px;
-font-weight: 700;
-line-height: 36px;
-letter-spacing: 0%;
-text-align: left;
+
+.iwillcode-section-container {
+    display: flex;
+    width: 850px;
+    height: 240px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    padding: 0px;
+    margin-right: 10;
 }
 
-
-
-.inspiration-section-container
-{
-width: 1140px;
-height: 777px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-padding: 0px;
-}
-.inspiration-section-title
-{
-width: 852px;
-height: 39px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-}
-.inspiration-section-description
-{
-width: 852px;
-height: 52px;
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
-text-align: center;
-}
-.inspiration-video
-{
-width: 1076px;
-height: 550px;
-border-radius: 16px;
-
-background: url(Jhankar);
-}
-.mytarget-section-text
-{
-width: 852px;
-height: 115px;
-align-items: center;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-padding: 0px;
-
-}
-.mytarget-section-title
-{
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 32px;
-font-weight: 800;
-line-height: 37px;
-letter-spacing: 0%;
-text-align: center;
-}
-.mytarget-section-description
-{
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
-text-align: center;
+.iwillcode-section-text-title {
+    width: 390px;
+    height: 72px;
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
 }
 
 
 
-
-
-.mytarget-section-img
-{
-display: flex;
-gap: 0px;
-}
-.target-1
-{
-border-radius: 16px;
-
-background: rgba(255, 76, 30, 0.05);
-
-width: 284px;
-height: 220px;
-}
-.img-1
-{
+.inspiration-section-container {
+    width: 1140px;
+    height: 777px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px;
 
 }
-.target-2
-{
-width: 284px;
-height: 220px;
-border-radius: 16px;
 
-background: rgba(0, 76, 232, 0.05);
+.inspiration-section-title {
+    width: 852px;
+    height: 39px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 10px;
 }
-.target-3
-{
-width: 284px;
-height: 220px;
-border-radius: 16px;
 
-background: rgba(255, 223, 0, 0.05);
+.inspiration-section-description {
+    width: 852px;
+    height: 52px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin: 30px;
 }
-.handshake
-{
-width: 1140px;
-height: 314px;
-background-image: url('assets/handshake.jpg');
-background-size: cover;
-background-position: center;
-border-radius: 16px;
-background-color:  rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url(Email);;
 
+.inspiration-video {
+    width: 1076px;
+    height: 550px;
+    border-radius: 16px;
 
+    background: url(Jhankar);
 }
-.footer-text
-{
-width: 1044px;
-height: 186px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px;
-margin: 32px 0px;
-}
-.footer-title
-{
-width: 230px;
-height: 36px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px;
-color: rgb(255, 255, 255);
-font-family: Azeret Mono;
-font-size: 18px;
-font-weight: 550;
-line-height: 36px;
-letter-spacing: 0%;
-text-align: center;
+
+.mytarget-section-text {
+    width: 852px;
+    height: 115px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px;
 
 }
-.footer-description
-{
-width: 730px;
-height: 104px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px;
-color: rgb(255, 255, 255);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
-text-align: center;
+
+.mytarget-section-title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
 }
-.footer-text-butoon
-{
-width: 548px;
-height: 57px;
-display: flex;
-flex-direction: row;
-justify-content: flex-start;
-align-items: center;
-padding: 19px 20px 19px 20px;
-margin: 0px 16px;
-box-sizing: border-box;
-border: 1px solid rgba(13, 19, 33, 0.15);
-border-radius: 8px;
 
-background: rgb(255, 255, 255);
-display: flex;
-flex-direction: row;
-justify-content: flex-start;
-align-items: center;
-padding: 19px 20px 19px 20px;
-
-/* Inside Auto Layout */
-flex: none;
-order: 0;
-flex-grow: 0;
-margin: 0px 16px;
+.mytarget-section-description {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
 }
-.footer-submit
-{
-width: 120px;
-height: 58px;
 
+
+
+
+
+.mytarget-section-img {
+    display: flex;
+    gap: 0px;
+}
+
+.target-1 {
+    border-radius: 16px;
+
+    background: rgba(255, 76, 30, 0.05);
+
+    width: 284px;
+    height: 220px;
+}
+
+.img-1 {}
+
+.target-2 {
+    width: 284px;
+    height: 220px;
+    border-radius: 16px;
+
+    background: rgba(0, 76, 232, 0.05);
+}
+
+.target-title-1 {
+    width: 284px;
+    height: 36px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.target-des-1 {
+    width: 284px;
+    height: 52px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 16px;
+}
+
+.target-link-1 {
+    width: 284px;
+    height: 20px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+    margin-top: 30px;
+}
+
+.target-3 {
+    width: 284px;
+    height: 220px;
+    border-radius: 16px;
+
+    background: rgba(255, 223, 0, 0.05);
+}
+
+/* footer style */
+footer {
+
+    /* padding: 130px 230px; */
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column {
+    margin-top: 20%;
+    text-align: center;
+    width: 350px;
+}
+
+footer input[type="text"],
+footer input[type="email"],
+footer textarea {
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+
+}
+
+.secondary-bg {
+    width: 1900px;
+    height: 653px;
+
+    background-image: url(assets/handshake.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+
+.btn-primary {
+    background-color: #FD6E0A;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    border: none;
+    padding: 18px 35px;
+    border-radius: 5px;
 }
