--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ padding: 0px; */
     justify-content: center;
     align-items: flex-start;
     padding: 0px;
-    
+
 
 }
 
@@ -322,6 +322,10 @@ padding: 0px; */
     justify-content: flex-start;
     align-items: center;
     margin: 10px;
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 700;
 }
 
 .inspiration-section-description {
@@ -458,6 +462,7 @@ footer {
     /* padding: 130px 230px; */
     display: flex;
     gap: 100px;
+    margin-top: 50px;
 }
 
 .footer-column {
